[package]
authors = ["pjmp"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A npm inspired cargo subcommand for listing and updating binaries installed in $CARGO_HOME/bin."
edition = "2021"
homepage = "https://github.com/pombadev/cargo-updater"
keywords = ["cargo", "cargo-subcommand"]
license = "MIT OR Apache-2.0"
name = "cargo-updater"
readme = "README.md"
repository = "https://github.com/pombadev/cargo-updater"
resolver = "2"
version = "0.12.0"

[dependencies]
anyhow = "1.0.62"
clap = {version = "3.2.17", default-features = false, features = ["std", "suggestions"]}
colored = "2.0.0"
semver = "1.0.13"
term-table = "1.3.2"
time = {version = "0.3.14", features = ["parsing"]}
ureq = {version = "2.5.0", features = ["json"]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
