[package]
authors = ["pjmp"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A npm inspired cargo subcommand for listing and updating binaries installed in $CARGO_HOME/bin."
edition = "2021"
homepage = "https://github.com/pombadev/cargo-updater"
keywords = ["cargo", "cargo-subcommand"]
license = "MIT OR Apache-2.0"
name = "cargo-updater"
readme = "README.md"
repository = "https://github.com/pombadev/cargo-updater"
resolver = "2"
version = "0.20.0"

[dependencies]
anyhow = "1.0.66"
clap = {version = "4.0.26", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]}
colored = "2.0.0"
semver = {version = "1.0.14", default-features = false, features = ["std"]}
term-table = "1.3.2"
time = {version = "0.3.17", features = ["parsing"], default-features = false}
ureq = {version = "2.5.0", features = ["json", "tls"], default-features = false}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
